--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
      <li><a href="#">Nuestro equipo</a></li>
      <li><a href="#">Projectos</a></li>
      <li><a href="#">Contacto</a></li>
+     <li><a href="#">Email</a></li>
+     <li><a href="#">Teléfono</a></li>
+
    </ul>
 
   <h2>Cabecera de artículo</h2>
